--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             "esri/layers/FeatureLayer",
             "esri/widgets/Locate",
             "esri/layers/ElevationLayer",
-            "esri/widgets/ElevationProfile"
+            "esri/widgets/Expand",
+            "esri/widgets/ElevationProfile",
+            "esri/geometry/Point"
         ], function (
             esriConfig,
             Map,
@@ -52,7 +54,9 @@
             FeatureLayer,
             Locate,
             ElevationLayer,
-            ElevationProfile
+            Expand,
+            ElevationProfile,
+            Point
         ) {
 
             esriConfig.apiKey = "AAPKdc9129c5be29469083dae3516545eeebvHghXVGFueZmm1AJKr4FRJ8Gkpkg2ZrHNiheHk6cGH6qvdp8RMVdW7rPzIgLG4cK";
@@ -76,8 +80,8 @@
             });
             const view = new MapView({
                 map: map,
-                center: [-118.805, 34.027], // Longitude, latitude
-                zoom: 13, // Zoom level
+                center: new Point({ x: 1795999, y: 5457405, spatialReference: { wkid: 2193 } }), // map center
+                zoom: 12, // Zoom level
                 container: "viewDiv" // Div element
             });
             const locate = new Locate({
@@ -85,11 +89,11 @@
                 useHeadingEnabled: false,
                 goToOverride: function (view, options) {
                     options.target.scale = 1500;
+                    console.log(options.target);
                     return view.goTo(options.target);
                 }
             });
             view.ui.add(locate, "top-left");
-
             const trailsRenderer = {
                 "type": "unique-value",
                 field: "STATUS",
@@ -998,12 +1002,12 @@
 
             const popupHuts = {
                 // "title": "{name}",
-                "content": "<img src={introductionThumbnail} /><br />" + 
-                "<h1>{name}</h1><i>{place}, {region}</i><br /><br />" + 
-                "<b>Facilities:</b> {facilities}<br />" + 
-                "<b>Status:</b> {status}<br />" + 
-                "<b>Bookable:</b> {bookable}<br />" + 
-                "<a href='{staticLink}'>More Info</a>"
+                "content": "<img src={introductionThumbnail} /><br />" +
+                    "<h1>{name}</h1><i>{place}, {region}</i><br /><br />" +
+                    "<b>Facilities:</b> {facilities}<br />" +
+                    "<b>Status:</b> {status}<br />" +
+                    "<b>Bookable:</b> {bookable}<br />" +
+                    "<a href='{staticLink}'>More Info</a>"
             }
 
             const hutsLayer = new FeatureLayer({
@@ -1016,9 +1020,12 @@
             map.add(hutsLayer);
 
             const elevationProfile = new ElevationProfile({ view: view, profiles: [{ type: "ground" }] });
+            // const elevationProfileExpand = new Expand({ expandIconClass: "esri-icon-polygon", view: view, content: elevationProfile, mode: "drawer" });
+            // view.ui.add(elevationProfileExpand, "top-left");
+
             view.when(function () {
                 view.ui.add(elevationProfile);
-                elevationProfile.viewModel.start();
+                // elevationProfile.viewModel.start();
             });
 
         });
