update readme and steps up to step 5

--- a/4 Advanced Cartography/index.html
+++ b/4 Advanced Cartography/index.html
@@ -101,7 +101,7 @@
                 zoom: 13, // Zoom level
                 container: "viewDiv" // Div element
             });
-
+            view.popup.defaultPopupTemplateEnabled = true;
         });
     </script>
 
