--- a/5 Add Widgets/index.html
+++ b/5 Add Widgets/index.html
@@ -5,146 +5,11 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>GALOP Dev Prac</title>
 
-    <style>
-        html,
-        body,
-        #viewDiv {
-            padding: 0;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-        }
-        .esri-elevation-profile.esri-component.esri-widget--panel {
-            margin-left: auto;
-            margin-right: auto;
-            position: absolute !important;
-            bottom: 20;
-            left: 0;
-            right: 0;
-            width: 90% !important;
-            padding-left: 20 !important;
-            padding-right: 20 !important;
-        }
-    </style>
-
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://js.arcgis.com/4.18/"></script>
     <script src="renderers.js"></script>
-    <script>
-        require([
-            "esri/config",
-            "esri/Map",
-            "esri/views/MapView",
-            "esri/Basemap",
-            "esri/layers/VectorTileLayer",
-            "esri/layers/TileLayer",
-            "esri/geometry/Point",
-            "esri/layers/FeatureLayer",
-            "esri/widgets/Locate",
-            "esri/layers/ElevationLayer",
-            "esri/widgets/ElevationProfile",
-        ], function (
-            esriConfig,
-            Map,
-            MapView,
-            Basemap,
-            VectorTileLayer,
-            TileLayer,
-            Point,
-            FeatureLayer,
-            Locate,
-            ElevationLayer,
-            ElevationProfile,
-        ) {
-            esriConfig.apiKey = "AAPKdc9129c5be29469083dae3516545eeebvHghXVGFueZmm1AJKr4FRJ8Gkpkg2ZrHNiheHk6cGH6qvdp8RMVdW7rPzIgLG4cK";
-            const topoLayer = new VectorTileLayer({
-                portalItem: {
-                    id: "734c12e9904b4a8086d2dff8582a93a1" // NZ Topo Relief (Eagle)
-                }
-            });
-            const hillshadeLayer = new TileLayer({
-                portalItem: {
-                    id: "38c860f8dbd24820b2a59ccc9a3dabdb" // NZ Alpha Hillshade (Eagle)
-                }
-            });
-            const basemap2d = new Basemap({
-                baseLayers: [
-                    hillshadeLayer,
-                    topoLayer
-                ]
-            });
-            const popupHuts = {
-                "content": "<img src={introductionThumbnail} /><br />" +
-                    "<h1>{name}</h1><i>{place}, {region}</i><br /><br />" +
-                    "<b>Facilities:</b> {facilities}<br />" +
-                    "<b>Status:</b> {status}<br />" +
-                    "<b>Bookable:</b> {bookable}<br />" +
-                    "<a href='{staticLink}'>More Info</a>"
-            }
-            const labelHuts = {
-                // autocasts as new LabelClass()
-                symbol: {
-                    type: "text", // autocasts as new TextSymbol()
-                    color: [43, 43, 43, 255],
-                    font: {
-                        // autocast as new Font()
-                        weight: "bold"
-                    },
-                    haloSize: 1,
-                    haloColor: "white"
-                },
-                labelPlacement: "below-center",
-                labelExpressionInfo: {
-                    expression: "$feature.name"
-                }
-            };
-            const hutsLayer = new FeatureLayer({
-                url: "https://services1.arcgis.com/3JjYDyG3oajxU6HO/arcgis/rest/services/DOC_Huts/FeatureServer",
-                popupTemplate: popupHuts,
-                labelingInfo: [labelHuts],
-                renderer: hutsRenderer,
-            });
-            const trailsLayer = new FeatureLayer({
-                url: "https://services1.arcgis.com/3JjYDyG3oajxU6HO/arcgis/rest/services/DOC_Tracks/FeatureServer",
-                renderer: trailsRenderer
-            });
-            const elevationLayer = new ElevationLayer({
-                portalItem: {
-                    id: "2ce4fe7d77024e719f8a04d2155b3fd2"
-                }
-            });
-            const map = new Map({
-                basemap: basemap2d,
-                layers: [trailsLayer, hutsLayer],
-                ground: {
-                    layers: [elevationLayer]
-                }
-            });
-            const view = new MapView({
-                map: map,
-                center: new Point({ x: 1795999, y: 5457405, spatialReference: { wkid: 2193 } }),
-                zoom: 13, // Zoom level
-                container: "viewDiv" // Div element
-            });
-            view.popup.defaultPopupTemplateEnabled = true;
-            const locate = new Locate({
-                view: view,
-                useHeadingEnabled: false,
-                goToOverride: function (view, options) {
-                    options.target.scale = 1500;
-                    return view.goTo(options.target);
-                }
-            });
-            view.ui.add(locate, "top-left");
-            const elevationProfile = new ElevationProfile({
-                view: view,
-                profiles: [{ type: "ground" }]
-            });
-            view.when(function () {
-                view.ui.add(elevationProfile);
-            });
-        });
-    </script>
+    <script src="map.js"></script>
 
 </head>
 
