--- a/2 Customise your map and show layers/index.html
+++ b/2 Customise your map and show layers/index.html
@@ -1,84 +1,93 @@
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>GALOP Dev Prac</title>
+    <meta
+      name="viewport"
+      content="initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <title>ArcGIS API for JavaScript Tutorials: Display a map</title>
 
     <style>
-        html,
-        body,
-        #viewDiv {
-            padding: 0;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-        }
+      html,
+      body,
+      #viewDiv {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
     </style>
-
-    <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
-    <script src="https://js.arcgis.com/4.18/"></script>
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.22/esri/themes/light/main.css"
+    />
+    <script src="https://js.arcgis.com/4.22/"></script>
     <script>
-        require([
-            "esri/config",
-            "esri/Map",
-            "esri/views/MapView",
-            "esri/Basemap",
-            "esri/layers/VectorTileLayer",
-            "esri/layers/TileLayer",
-            "esri/geometry/Point",
-            "esri/layers/FeatureLayer"
-        ], function (
-            esriConfig,
-            Map,
-            MapView,
-            Basemap,
-            VectorTileLayer,
-            TileLayer,
-            Point,
-            FeatureLayer
-        ) {
-            esriConfig.apiKey = "AAPKdc9129c5be29469083dae3516545eeebvHghXVGFueZmm1AJKr4FRJ8Gkpkg2ZrHNiheHk6cGH6qvdp8RMVdW7rPzIgLG4cK";
-            const topoLayer = new VectorTileLayer({
-                portalItem: {
-                    id: "734c12e9904b4a8086d2dff8582a93a1" // NZ Topo Relief (Eagle)
-                }
-            });
-            const hillshadeLayer = new TileLayer({
-                portalItem: {
-                    id: "38c860f8dbd24820b2a59ccc9a3dabdb" // NZ Alpha Hillshade (Eagle)
-                }
-            });
-            const basemap2d = new Basemap({
-                baseLayers: [
-                    hillshadeLayer,
-                    topoLayer
-                ]
-            });
-            const hutsLayer = new FeatureLayer({
-                url: "https://services1.arcgis.com/3JjYDyG3oajxU6HO/arcgis/rest/services/DOC_Huts/FeatureServer"
-            });
-            const trailsLayer = new FeatureLayer({
-                url: "https://services1.arcgis.com/3JjYDyG3oajxU6HO/arcgis/rest/services/DOC_Tracks/FeatureServer"
-            });
-            const map = new Map({
-                basemap: basemap2d,
-                layers: [trailsLayer, hutsLayer]
-            });
-            const view = new MapView({
-                map: map,
-                center: new Point({ x: 1795999, y: 5457405, spatialReference: { wkid: 2193 } }),
-                zoom: 13, // Zoom level
-                container: "viewDiv" // Div element
-            });
+      require([
+        "esri/config",
+        "esri/Map",
+        "esri/views/MapView",
+        "esri/Basemap",
+        "esri/layers/VectorTileLayer",
+        "esri/layers/TileLayer",
+        "esri/geometry/Point",
+        "esri/layers/FeatureLayer",
+      ], function (
+        esriConfig,
+        Map,
+        MapView,
+        Basemap,
+        VectorTileLayer,
+        TileLayer,
+        Point,
+        FeatureLayer
+      ) {
+        esriConfig.apiKey =
+          "AAPKf707d78f72a64902ab2948fb92f097c5GF9NsiP5Mhdw5Dxsl7ZqbKhVIP1Rwn6GKS7G2eeSOSg12DCvCSYYLTG6hvtEDjxU";
 
+        const topoLayer = new VectorTileLayer({
+          portalItem: {
+            id: "734c12e9904b4a8086d2dff8582a93a1", // Forest and Parks Canvas
+          },
         });
+
+        const hillshadeLayer = new TileLayer({
+          portalItem: {
+            id: "38c860f8dbd24820b2a59ccc9a3dabdb ", // World Hillshade
+          },
+        });
+
+        const tracks = new FeatureLayer({
+          url: "https://services1.arcgis.com/3JjYDyG3oajxU6HO/arcgis/rest/services/DOC_Tracks/FeatureServer",
+        });
+
+        const huts = new FeatureLayer({
+          url: "https://services1.arcgis.com/3JjYDyG3oajxU6HO/arcgis/rest/services/DOC_Huts/FeatureServer",
+        });
+
+        const basemap = new Basemap({
+          baseLayers: [hillshadeLayer, topoLayer],
+        });
+
+        const map = new Map({
+          basemap: basemap, // Basemap layer service
+          layers: [tracks, huts],
+        });
+
+        const view = new MapView({
+          map: map,
+          center: new Point({
+            x: 1795999,
+            y: 5457405,
+            spatialReference: { wkid: 2193 },
+          }),
+          zoom: 10, // Zoom level
+          container: "viewDiv", // Div element
+        });
+      });
     </script>
-
-</head>
-
-<body>
+  </head>
+  <body>
     <div id="viewDiv"></div>
-</body>
-
+  </body>
 </html>
