--- a/1 Display a Map/index.html
+++ b/1 Display a Map/index.html
@@ -1,50 +1,52 @@
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>GALOP Dev Prac</title>
+    <meta
+      name="viewport"
+      content="initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <title>ArcGIS API for JavaScript Tutorials: Display a map</title>
 
     <style>
-        html,
-        body,
-        #viewDiv {
-            padding: 0;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-        }
+      html,
+      body,
+      #viewDiv {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
     </style>
 
-    <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
-    <script src="https://js.arcgis.com/4.18/"></script>
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.22/esri/themes/light/main.css"
+    />
+    <script src="https://js.arcgis.com/4.22/"></script>
+
     <script>
-        require([
-            "esri/config",
-            "esri/Map",
-            "esri/views/MapView",
-        ], function (
-            esriConfig,
-            Map,
-            MapView
-        ) {
-            esriConfig.apiKey = "AAPKdc9129c5be29469083dae3516545eeebvHghXVGFueZmm1AJKr4FRJ8Gkpkg2ZrHNiheHk6cGH6qvdp8RMVdW7rPzIgLG4cK";
-            const map = new Map({
-                basemap: "arcgis-topographic" // Basemap layer service
-            });
-            const view = new MapView({
-                map: map,
-                center: [-118.805, 34.027], // Longitude, latitude
-                zoom: 13, // Zoom level
-                container: "viewDiv" // Div element
-            });
+      require(["esri/config", "esri/Map", "esri/views/MapView"], function (
+        esriConfig,
+        Map,
+        MapView
+      ) {
+        esriConfig.apiKey =
+          "AAPKf707d78f72a64902ab2948fb92f097c5GF9NsiP5Mhdw5Dxsl7ZqbKhVIP1Rwn6GKS7G2eeSOSg12DCvCSYYLTG6hvtEDjxU";
+
+        const map = new Map({
+          basemap: "arcgis-topographic", // Basemap layer service
         });
+
+        const view = new MapView({
+          map: map,
+          center: [-118.805, 34.027], // Longitude, latitude
+          zoom: 13, // Zoom level
+          container: "viewDiv", // Div element
+        });
+      });
     </script>
-
-</head>
-
-<body>
+  </head>
+  <body>
     <div id="viewDiv"></div>
-</body>
-
+  </body>
 </html>
