--- a/5 Add Widgets/index.html
+++ b/5 Add Widgets/index.html
@@ -1,20 +1,21 @@
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>GALOP Dev Prac</title>
-
-    <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://js.arcgis.com/4.18/"></script>
+    <meta
+      name="viewport"
+      content="initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <title>ArcGIS API for JavaScript Tutorials: Display a map</title>
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.22/esri/themes/light/main.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://js.arcgis.com/4.22/"></script>
     <script src="renderers.js"></script>
     <script src="map.js"></script>
-
-</head>
-
-<body>
+  </head>
+  <body>
     <div id="viewDiv"></div>
-</body>
-
+  </body>
 </html>
